# ai-2026

./: .env.example  .gitignore  pyproject.toml
ai_2026/: a.py  common.py
ai_2026/robot/: usage.py
ai_2026/sentence_evaluator/: a.py  b.py  evaluator.py  model.py  results.md
ai_2026/student/: common.py  processor.py  processor_anthropic.py  processor_xai.py  simple_batch.py
